--- a/initial_splitting.ipynb
+++ b/initial_splitting.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "initial_splitting.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN5HYco5Hl6Sp+ITX7iBfMH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +37,7 @@
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -48,12 +47,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l6TgbzTVsZmR",
-        "outputId": "96887aca-ab2d-48cf-8d66-bec098d16adc"
+        "outputId": "cd58c6cf-06fd-44e7-cdd5-9af6d6a86027"
       },
       "source": [
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +71,18 @@
       "source": [
         "df = pd.read_csv('/content/gdrive/MyDrive/EE_505/Dataset/twitter_sentiments_data.csv')"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.set_index('tweet_index',inplace=True)"
+      ],
+      "metadata": {
+        "id": "unAAfMFXkC4o"
+      },
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -85,7 +95,7 @@
         "Y = df['target']\n",
         "X = df['tweet']"
       ],
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -97,7 +107,7 @@
         "# Separate out the test-set as hold-out (80:20)\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, Y,stratify=Y, test_size=0.20,random_state=random_state)"
       ],
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -106,24 +116,51 @@
         "id": "vN9Bc9Rtsmh1"
       },
       "source": [
-        "X_train.to_csv('/content/gdrive/MyDrive/EE_505/Dataset/X_train.csv')\n",
-        "X_test.to_csv('/content/gdrive/MyDrive/EE_505/Dataset/X_test.csv')\n",
-        "y_train.to_csv('/content/gdrive/MyDrive/EE_505/Dataset/y_train.csv')\n",
-        "y_test.to_csv('/content/gdrive/MyDrive/EE_505/Dataset/y_test.csv')"
+        "X_train.to_csv('/content/gdrive/MyDrive/EE_505/Dataset/X_train.csv',index=True)\n",
+        "X_test.to_csv('/content/gdrive/MyDrive/EE_505/Dataset/X_test.csv',index=True)\n",
+        "y_train.to_csv('/content/gdrive/MyDrive/EE_505/Dataset/y_train.csv',index=True)\n",
+        "y_test.to_csv('/content/gdrive/MyDrive/EE_505/Dataset/y_test.csv',index=True)"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vxcyKLg5soBV"
+        "id": "vxcyKLg5soBV",
+        "outputId": "75dae808-1c33-4112-ae86-97e24495cf18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         ""
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tweet_index\n",
+              "2191045532                         HOPE ENGLISH IS BETTER!!!!! \n",
+              "2007799238    back at home. its so dang nice out. hanging wi...\n",
+              "2050755502    i'm off guys. talk to you another day... or la...\n",
+              "1822611554                               @sheywantsPDA I`M SAD \n",
+              "2048346628                          @cedmeijer amazing concert \n",
+              "                                    ...                        \n",
+              "1678267086    @jeffmello You are too funny. I really like yo...\n",
+              "2325332986    @DIY_Musicians HTTPS is for secured pages. Not...\n",
+              "1823599541    @JAMIASGADGET you never talk to me when im the...\n",
+              "2052669256    @shultquist I will try to remember that in 6 d...\n",
+              "2060157251    ahhh today was nice  went shpping, hung out wi...\n",
+              "Name: tweet, Length: 1048084, dtype: object"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     }
   ]
 }
